style.css
/* universal styles */
* {
    text-align: center;
    width: auto;
    margin: 0;
    /* border: .1px solid red; */
}
main {
    position: relative;
    width: 100%;
    margin: 4rem auto 0;
    padding: 4rem 0;
    box-shadow: inset 75px 0 200px, inset -75px 0 200px;
}
body {
    background-color: #4b4c4d;
    height: auto;
    width: 100%;

}
h1 {
    font-size: 7rem;
}
h2 {
    font-size: 2.5rem;
}
.anchor {
    display: block;
    position: relative;
    top: -200px;
    visibility: hidden;
}



/* header styles */
header {
    background-color: #DCB646;
    box-sizing: border-box;
    position: fixed;
    top: 0;
    width: 100%;
    height: 4rem;
    display: flex;
    justify-content: space-between;
    border-bottom: .15rem solid #000000;
    box-shadow: inset 0 3px 10px #000000;
    z-index: 5;
}
header h2 {
    margin-left: 2rem;
    margin-top: .5rem;
}
nav {
    display: inline-flex;
}
button {
    width: 7rem;
    height: 3rem;
    border: none;
    background-color: #000000;
    color: #DCB646;
    /* border-radius: .25rem; */
    border: .1px solid #000000;
    font-size: 1.5rem;
    box-shadow: inset 0px -2px 10px #707986;
    margin-right: 1.25rem;
    margin-top: .5rem;
}
.mobile {
    display: none;
}
#mobileMenu {
    background-color: unset;
    width: auto;
    display: none;
}
button:hover {
    box-shadow: inset 0 0 50px #009BDB;
}
button:active {
    background-color: #009BDB;
}
li {
    list-style: none;
}
#pageNav,
#projectList {
    position: absolute;
}
#pageNav {
    background-color: #000000;
    border-left: .1rem solid #000000;
    border-bottom: .1rem solid #000000;
    border-radius: 0 0 0 20px;
    box-shadow: inset -10px 0 25px #DCB646;
    top: 4rem;
    right: -48rem;
    height: fit-content;
    font-size: 1.75rem;
    padding: 1rem 1rem 0;
    transition: transform .25s ease-in-out;
}
#pageNav li {
    display: inline-block;
    margin-bottom: 1rem;
    border: .5px solid #000000;
    padding: 1rem;
    background-color: #DCB646;
    box-shadow: inset 0 -2px 10px #707986;
}
#pageNav a {
    text-decoration: none;
    color: #000000;
}
.showMenu {
    transform: translateX(-48rem);
}
#listButton {
    cursor: pointer;
}
#dropDown {
    margin-left: .75rem;
}
.collapse {
    transform: rotate(180deg);
}
#projectList {
    display: none;
    top: 9rem;
    right: 1rem;
    width: 12.9rem;
    background-color: #dddddd;
    padding: 0;
}
#projectList li {
    border-bottom: .1rem solid #000000;
    padding: .2rem;
}
section {
    margin: auto;
}

@media only screen and (max-width: 900px) {
    main {
        margin-top: 3rem;
    }
    header {
        height: 3rem;
    }
    header h2 {
        font-size: 1rem;
        width: 8rem;
        margin-left: .75rem;
    }
    header button {
        height: 2rem;
        width: auto;
    }
    header button img {
        height: 1.5rem;
    }
    #pageNav {
        top: 3rem;
        font-size: 1rem;
        padding: .5rem;
    }
    #pageNav li {
        padding: .5rem;
        margin-bottom: .25rem;
    }
    #dropDown {
        height: .9rem;
    }
    #projectList {
        width: 7.75rem;
        right: .5rem;
        top: 5.75rem;
    }
    #projectList li {
        padding: .2rem;
    }
    .mobile {
        display: inline;
    }
    .wide {
        display: none;
    }
    #mobileMenu {
        display: block;
    }
}
@media only screen and (max-width: 500px) {
    #pageNav {
        font-size: .65rem;
        max-width: 95%;
        border-radius: 0 0 0 .5rem;
    }
    #pageNav li {
        padding: .2rem;
    }
    #dropDown {
        height: .55rem;
        margin: auto .25rem;
    }
    #pageNav {
        padding: .5rem 0.25rem 0;
    }
    #projectList {
        width: 4.7rem;
        right: .3rem;
        top: 4.7rem;
        font-size: .65rem;
    }
}



/* footer styles */
footer {
    background-color: #000000;
    height: 2rem;
    width: 100%;
    position: static;
    bottom: 0;
}

